Fixed issue with footer overlapping content

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,5 @@ footer {
     justify-content: center;
     padding: 1%;
     font-size: 110%;
-    position: absolute;
-    bottom: 0%;
-    width: 100vw;
+    position: relative;
 }
